# sst

./: .gitignore  .goreleaser.yml  CLAUDE.md  CLOUDFLARE_PLUGIN_FIX_BREAKDOWN.md  CONTEXT.md  PRE_MIGRATION_TEST_PLAN.md  README.md  RELEASE_EXECUTION_SUMMARY.md  REPACKAGE.md  TESTS_BREAKDOWN.md  bun.lockb  create-release-v6.sh  go.mod  go.sum  install  opencode.jsonc  package-lock.json  package.json  test_build_events.go  test_imports.py
.github/workflows/: build.yml  check.yml  integration-tests.yml  pr-preview.yml  publish-python-sdk.yml  release-tarball.yml  release.yml  security.yml  test.yml
cmd/sst/: deploy.go  deploy_test.go  diff.go  diff_test.go  init.go  init_test.go  main.go  main_test.go  mosaic.go  policy.go  remove.go  remove_test.go  secret.go  shell.go  state.go  state_test.go  tunnel.go  types.go  ui.go
component/: package.json  tsconfig.json
component/script/: build.ts
component/src/: config.js
docs/: python-best-practices.md  python-lambda-improvements.md  python-migration-guide-simplified.md  python-migration-guide.md  python-performance-improvements.md  python-troubleshooting-guide.md  python-uv-workspace-resolution.md
examples/aws-agent-runtime/: Dockerfile  index.ts  package.json  sst.config.ts  test-deploy.ts  test-local.sh
examples/aws-agent-runtime-python/: pyproject.toml  sst.config.ts  test-deploy.py  test-local.sh
examples/aws-agent-runtime-python/agent/: Dockerfile  pyproject.toml
examples/aws-agent-runtime-python/agent/src/agent/: main.py
examples/aws-angular/: angular.json
examples/aws-apigv1/: package.json  sst-env.d.ts
examples/aws-apigv1-stream/: package.json  sst.config.ts
examples/aws-base/: package.json  sst.config.ts
examples/aws-bucket-lifecycle-rules/: sst.config.ts
examples/aws-bucket-subscriber/: test-multipart.mjs
examples/aws-bun/: sst.config.ts
examples/aws-bundle/: package.json
examples/aws-bus/: sst-env.d.ts
examples/aws-cloudfront-waf/: index.html  sst.config.ts
examples/aws-cluster-autoscaling/: package.json
examples/aws-cluster-vpclink/: sst.config.ts
examples/aws-cognito/: sst.config.ts
examples/aws-copy-files/: package.json
examples/aws-deno/: sst.config.ts
examples/aws-drizzle-migrations/: package.json  sst.config.ts
examples/aws-dsql/: README.md  package.json  sst.config.ts
examples/aws-dsql-drizzle/: sst.config.ts
examples/aws-dsql-multiregion/: README.md  lambda.ts  package.json  sst.config.ts
examples/aws-dsql-vpc/: sst.config.ts
examples/aws-dynamo/: package.json  sst.config.ts
examples/aws-dynamo-composite-keys/: sst.config.ts
examples/aws-ecr-lifecycle/: sst-env.d.ts  sst.config.ts
examples/aws-ecs-gpus/: .dockerignore  Dockerfile  app.py  package.json  requirements.txt  sst.config.ts
examples/aws-fastapi/: README.md  pyproject.toml
examples/aws-go-api-gateway-v2/: package.json
examples/aws-go-lambda-bucket-presigned-url/: package.json
examples/aws-go-lambda-dynamo/: package.json
examples/aws-group/: index.ts  package.json  sst.config.ts
examples/aws-hono/: client.ts  resource.ts  (+2 more)
examples/aws-hono-container/: sst-env.d.ts
examples/aws-hono-redis/: package.json
examples/aws-hono-stream/: index.ts  sst.config.ts
examples/aws-lambda-durable-python/: pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi
examples/aws-python-container/build_args/: Dockerfile  pyproject.toml  sst.pyi
examples/aws-python-container/build_args/src/build_args/: api.py
examples/aws-python-monorepo/: .gitignore  README.md  pyproject.toml  sst-env.d.ts
examples/aws-python-monorepo/apps/backend/: sst.pyi
examples/aws-python-monorepo/apps/backend/src/functions/: api.py
examples/aws-python-monorepo/infra/: api.ts
examples/aws-python-node-monorepo/apps/python-backend/: pyproject.toml  sst.pyi
examples/aws-python-node-monorepo/apps/python-backend/src/functions/: api.py
examples/aws-python/functions/: pyproject.toml  sst.pyi
examples/aws-workflow-python/: pyproject.toml  sst.config.ts
examples/aws-workflow-python/invoker/: main.py  pyproject.toml
examples/aws-workflow-python/resolver/: main.py  pyproject.toml
examples/aws-workflow-python/workflow/: main.py  pyproject.toml  sst.pyi
examples/python-layouts/flat-layout/: README.md  handler.py  pyproject.toml  sst.config.ts  utils.py
examples/python-layouts/monorepo-layout/: README.md  pyproject.toml  sst.config.ts  sst.pyi
examples/python-layouts/monorepo-layout/services/api/: handler.py  pyproject.toml
examples/python-layouts/monorepo-layout/services/auth/: handler.py  pyproject.toml
examples/python-layouts/monorepo-layout/services/worker/: handler.py  pyproject.toml
examples/python-layouts/monorepo-layout/shared/: pyproject.toml  sst.pyi  utils.py
examples/python-layouts/monorepo-layout/shared/shared/: utils.py
examples/python-layouts/monorepo-layout/vendored_sst/: pyproject.toml
examples/python-layouts/nested-layout/: README.md  pyproject.toml  sst.config.ts  sst.pyi  test_capabilities.py
examples/python-layouts/nested-layout/app/data/: config.json
examples/python-layouts/nested-layout/app/functions/api/: handler.py
examples/python-layouts/nested-layout/app/functions/auth/: handler.py
examples/python-layouts/nested-layout/app/functions/test/: __init__.py  handler.py
examples/python-layouts/nested-layout/app/functions/worker/: handler.py
examples/python-layouts/nested-layout/shared/: utils.py
examples/python-layouts/workspace-layout/: README.md  pyproject.toml  sst.config.ts  sst.pyi
examples/python-layouts/workspace-layout/src/mypackage/: __init__.py  api_handler.py  handler.py  utils.py
examples/python-layouts/workspace-layout/tests/: test_handler.py
examples/python-modern-uv/: README.md  handler.py  package.json  pyproject.toml  sst-env.d.ts  sst.config.ts
examples/python-modern-uv/src/myapp/: utils.py
platform/: bun.lockb  package.json  platform.go  tsconfig.json  vitest.config.ts
sdk/python/: PUBLISHING.md  README.md  pyproject.toml
sdk/python/src/sst/: __init__.py
www/: astro.config.mjs  changelog.ts  generate.ts  package.json  sst.config.ts
(+1222 files in other folders)
