[project]
name = "app"
version = "0.1.0"
description = "A SST app"
authors = [{ name = "Nick Wall", email = "mail@walln.dev" }]
dependencies = [
    "sst",
    "aws-durable-execution-sdk-python (>=1.3.0,<2.0.0)",
    "boto3 (>=1.42.59,<2.0.0)"
]
requires-python = "==3.13.*"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
sst = { git = "https://github.com/sst/sst.git", subdirectory = "sdk/python", branch = "dev" }