[project]
name = "app"
version = "0.1.0"
description = "A SST app"
dependencies = [
    "sst-sdk",
    "aws-durable-execution-sdk-python (>=1.3.0,<2.0.0)",
    "boto3 (>=1.42.59,<2.0.0)"
]
requires-python = "==3.13.*"


[tool.uv.workspace]
members = ["workflow", "invoker", "resolver"]

[tool.uv.sources]
sst-sdk = { git = "https://github.com/anomalyco/sst.git", subdirectory = "sdk/python", branch = "dev" }
