[project]
name = "python-modern-uv"
version = "0.1.0"
description = "Test modern uv project structures"
dependencies = ["requests>=2.31.0", "api", "worker", "shared"]
requires-python = ">=3.11"

[tool.uv]
package = true

[tool.uv.sources]
api = { workspace = true }
worker = { workspace = true }
shared = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myapp"]
