[project]
name = "flat-example"
version = "0.1.0"
description = "SST Python flat layout example"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "boto3>=1.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# For flat layout, explicitly include the Python files
include = [
    "handler.py",
    "utils.py"
]

[tool.hatch.build.targets.sdist]
# For flat layout, explicitly include the Python files for source distribution
include = [
    "handler.py",
    "utils.py",
    "pyproject.toml"
]
exclude = [
    ".sst/",
    "node_modules/",
    "dist/",
    ".venv/",
    "__pycache__/"
]