[project]
name = "monorepo-example"
version = "0.1.0"
description = "SST Python monorepo layout example"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "shared",
    "sst",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "shared"]

[tool.hatch.build.targets.sdist]
packages = ["services", "shared"]

[tool.uv.sources]
shared = { workspace = true }
sst = { git = "https://github.com/sst/sst.git", subdirectory = "sdk/python", branch = "dev" }

[tool.uv.workspace]
members = ["services/*", "shared"]
