[project]
name = "nested-example"
version = "0.1.0"
description = "SST Python nested layout example"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "boto3>=1.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "shared"]

[tool.hatch.build.targets.sdist]
packages = ["app", "shared"]
include = ["pyproject.toml"]