[project]
name = "workspace-example"
version = "0.1.0"
description = "SST Python workspace layout example"
dependencies = [
    "requests>=2.31.0",
    "boto3>=1.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypackage"]

[tool.hatch.build.targets.sdist]
packages = ["src/mypackage"]
include = ["pyproject.toml"]