[project]
name = "functions"
version = "0.1.0"
description = "Lambda function (container-mode) handlers"
dependencies = ["lib", "sst"]
requires-python = "==3.11.*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lib = { workspace = true }
sst = { git = "https://github.com/walln/sst", branch = "walln/python-improvements", subdirectory = "sdk/python" }
