[project]
name = "api-service"
version = "0.1.0"
description = "API service"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }
