[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication service"
requires-python = ">=3.12"
dependencies = [
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }
