[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication service"
requires-python = ">=3.12"
dependencies = [
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Use workspace = true to reference the shared package from the UV workspace
[tool.uv.sources]
shared = { workspace = true }
