[project]
name = "worker-service"
version = "0.1.0"
description = "Worker service"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Use workspace = true to reference the shared package from the UV workspace
[tool.uv.sources]
shared = { workspace = true }
